kustomize/base/mempass/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mempass
  namespace: mempass
spec:
  ports:
    - port: 80
      targetPort: 4321
  selector:
    app: mempass
